@@ -14,6 +14,7 @@ import org.apache.lucene.index.LeafReaderContext;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.tests.index.RandomIndexWriter;
 import org.apache.lucene.util.BytesRef;
+import org.elasticsearch.common.breaker.CircuitBreaker;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.index.fieldvisitor.StoredFieldLoader;
 import org.elasticsearch.plugins.internal.XContentMeteringParserDecorator;
@@ -37,72 +38,166 @@ import static org.elasticsearch.test.ESTestCase.randomBoolean;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 
+/**
+ * Test helper for {@link BlockLoader}. Run it like:
+ * <pre>{@code
+ *  BlockLoaderTestRunner runner = new BlockLoaderTestRunner(params);
+ *  runner.mapperService(createMapperService...);
+ *  runner.fieldName("field").document(Map.of("field", 1));
+ *  runner.run(1);
+ * }</pre>
+ */
 public class BlockLoaderTestRunner {
-    private final BlockLoaderTestCase.Params params;
-    private final boolean allowDummyDocs;
-
     public interface ResultMatcher {
         void match(Object expected, Object actual);
     }
 
-    public BlockLoaderTestRunner(BlockLoaderTestCase.Params params, boolean allowDummyDocs) {
+    private final BlockLoaderTestCase.Params params;
+    private boolean allowDummyDocs;
+    private MapperService mapperService;
+    private CircuitBreaker breaker;
+    private String fieldName;
+    private ParsedDocument doc;
+    private Map<String, Object> mapDoc;
+    private ResultMatcher matcher = (expected, actual) -> assertThat(actual, PrettyEqual.prettyEqualTo(expected));
+
+    public BlockLoaderTestRunner(BlockLoaderTestCase.Params params) {
         this.params = params;
-        this.allowDummyDocs = allowDummyDocs;
     }
 
-    public void defaultMatcher(Object expected, Object actual) {
-        assertThat(actual, PrettyEqual.prettyEqualTo(expected));
+    /**
+     * Allow dummy documents in test index. This defaults to {@code false} but many callers
+     * are fine with these and call this.
+     */
+    public BlockLoaderTestRunner allowDummyDocs() {
+        this.allowDummyDocs = true;
+        return this;
     }
 
-    public void runTest(MapperService mapperService, Map<String, Object> document, Object expected, String blockLoaderFieldName)
-        throws IOException {
-        runTest(mapperService, document, expected, blockLoaderFieldName, this::defaultMatcher);
+    /**
+     * Set the {@link MapperService} to use for the test. This must be provided before
+     * calling {@link #run}.
+     */
+    public BlockLoaderTestRunner mapperService(MapperService mapperService) {
+        this.mapperService = mapperService;
+        return this;
     }
 
-    public void runTest(
-        MapperService mapperService,
-        Map<String, Object> document,
-        Object expected,
-        String blockLoaderFieldName,
-        ResultMatcher matcher
-    ) throws IOException {
-        var documentXContent = XContentBuilder.builder(XContentType.JSON.xContent()).map(document);
-        var source = new SourceToParse(
-            "1",
-            BytesReference.bytes(documentXContent),
-            XContentType.JSON,
-            null,
-            Map.of(),
-            Map.of(),
-            true,
-            XContentMeteringParserDecorator.NOOP,
-            null
-        );
-        var parsedDoc = mapperService.documentMapper().parse(source);
-        runTest(mapperService, parsedDoc, expected, blockLoaderFieldName, matcher);
+    /**
+     * Set the {@link CircuitBreaker} used for the test. This must be provided before
+     * calling {@link #run}.
+     */
+    public BlockLoaderTestRunner breaker(CircuitBreaker breaker) {
+        this.breaker = breaker;
+        return this;
     }
 
-    public void runTest(MapperService mapperService, ParsedDocument parsedDoc, Object expected, String blockLoaderFieldName)
-        throws IOException {
-        runTest(mapperService, parsedDoc, expected, blockLoaderFieldName, this::defaultMatcher);
+    /**
+     * The name of the field to load. The test sends this to {@link MapperService#fieldType}.
+     */
+    public String fieldName() {
+        return fieldName;
     }
 
-    public void runTest(
-        MapperService mapperService,
-        ParsedDocument parsedDoc,
-        Object expected,
-        String blockLoaderFieldName,
-        ResultMatcher matcher
-    ) throws IOException {
-        Object blockLoaderResult = setupAndInvokeBlockLoader(mapperService, parsedDoc, blockLoaderFieldName);
-        matcher.match(expected, blockLoaderResult);
+    /**
+     * Set the name of the field to load. The test sends this to {@link MapperService#fieldType}.
+     * This is required before calling {@link #run}
+     */
+    public BlockLoaderTestRunner fieldName(String fieldName) {
+        this.fieldName = fieldName;
+        return this;
     }
 
-    private Object setupAndInvokeBlockLoader(MapperService mapperService, ParsedDocument parsedDoc, String fieldName) throws IOException {
+    /**
+     * Configuration a non-standard matcher. The default matcher is usually fine, and
+     * you often don't have to call this.
+     */
+    public BlockLoaderTestRunner matcher(ResultMatcher matcher) {
+        this.matcher = matcher;
+        return this;
+    }
+
+    /**
+     * The document being parsed.
+     */
+    public ParsedDocument document() {
+        if (doc != null) {
+            return doc;
+        }
+        if (mapDoc != null) {
+            if (mapperService == null) {
+                throw new IllegalStateException("need to set mapperService");
+            }
+            try {
+                var documentXContent = XContentBuilder.builder(XContentType.JSON.xContent()).map(mapDoc);
+                var source = new SourceToParse(
+                    "1",
+                    BytesReference.bytes(documentXContent),
+                    XContentType.JSON,
+                    null,
+                    Map.of(),
+                    Map.of(),
+                    true,
+                    XContentMeteringParserDecorator.NOOP,
+                    null
+                );
+                doc = mapperService.documentMapper().parse(source);
+                return doc;
+            } catch (IOException e) {
+                throw new RuntimeException("shouldn't be possible", e);
+            }
+        }
+        throw new IllegalStateException("need to set doc");
+    }
+
+    /**
+     * The document to be parsed as a {@link Map}. This will only work if the document
+     * was set with {@link #document(Map)}.
+     */
+    public Map<String, Object> mapDoc() {
+        if (mapDoc == null) {
+            throw new IllegalStateException("need to set doc to a map");
+        }
+        return mapDoc;
+    }
+
+    /**
+     * Set the document to be parsed. A method with this name must be called before
+     * calling {@link #run}.
+     */
+    public void document(Map<String, Object> doc) throws IOException {
+        this.mapDoc = doc;
+    }
+
+    /**
+     * Set the document to be parsed. A method with this name must be called before
+     * calling {@link #run}.
+     */
+    public void document(ParsedDocument doc) throws IOException {
+        this.doc = doc;
+    }
+
+    /**
+     * Run the test and compare to {@code expected}.
+     */
+    public void run(Object expected) throws IOException {
+        matcher.match(expected, setupAndInvokeBlockLoader());
+    }
+
+    private Object setupAndInvokeBlockLoader() throws IOException {
+        if (mapperService == null) {
+            throw new IllegalStateException("need to set mapperService");
+        }
+        if (breaker == null) {
+            throw new IllegalStateException("need to set breaker");
+        }
+        if (fieldName == null) {
+            throw new IllegalStateException("need to set fieldName");
+        }
         try (Directory directory = newDirectory()) {
             RandomIndexWriter iw = new RandomIndexWriter(random(), directory);
 
-            LuceneDocument doc = parsedDoc.rootDoc();
+            LuceneDocument doc = this.document().rootDoc();
 
             /*
              * Add three documents with doc id 0, 1, 2. The real document is 1.
@@ -112,16 +207,16 @@ public class BlockLoaderTestRunner {
             iw.close();
 
             try (DirectoryReader reader = DirectoryReader.open(directory)) {
-                LeafReaderContext context = reader.leaves().get(0);
-                return load(createBlockLoader(mapperService, fieldName), context, mapperService);
+                LeafReaderContext context = reader.leaves().getFirst();
+                return load(createBlockLoader(fieldName), context);
             }
         }
     }
 
-    private Object load(BlockLoader blockLoader, LeafReaderContext context, MapperService mapperService) throws IOException {
+    private Object load(BlockLoader blockLoader, LeafReaderContext context) throws IOException {
         // `columnAtATimeReader` is tried first, we mimic `ValuesSourceReaderOperator`
-        var columnAtATimeReader = blockLoader.columnAtATimeReader(context);
-        if (columnAtATimeReader != null) {
+        var columnAtATimeReaderSource = blockLoader.columnAtATimeReader(context);
+        if (columnAtATimeReaderSource != null) {
             int[] docArray;
             int offset;
             if (randomBoolean()) {
@@ -146,9 +241,11 @@ public class BlockLoaderTestRunner {
                 }
             }
             BlockLoader.Docs docs = TestBlock.docs(docArray);
-            var block = (TestBlock) columnAtATimeReader.get().read(TestBlock.factory(), docs, offset, false);
-            assertThat(block.size(), equalTo(docArray.length - offset));
-            return block.get(0);
+            try (BlockLoader.ColumnAtATimeReader reader = columnAtATimeReaderSource.apply(breaker)) {
+                var block = (TestBlock) reader.read(TestBlock.factory(), docs, offset, false);
+                assertThat(block.size(), equalTo(docArray.length - offset));
+                return block.get(0);
+            }
         }
 
         StoredFieldsSpec storedFieldsSpec = blockLoader.rowStrideStoredFieldSpec();
@@ -167,14 +264,15 @@ public class BlockLoaderTestRunner {
         storedFieldsLoader.advanceTo(1);
 
         BlockLoader.Builder builder = blockLoader.builder(TestBlock.factory(), 1);
-        blockLoader.rowStrideReader(context).read(1, storedFieldsLoader, builder);
-        var block = (TestBlock) builder.build();
-        assertThat(block.size(), equalTo(1));
-
-        return block.get(0);
+        try (BlockLoader.RowStrideReader reader = blockLoader.rowStrideReader(breaker, context)) {
+            reader.read(1, storedFieldsLoader, builder);
+            var block = (TestBlock) builder.build();
+            assertThat(block.size(), equalTo(1));
+            return block.get(0);
+        }
     }
 
-    private BlockLoader createBlockLoader(MapperService mapperService, String fieldName) {
+    private BlockLoader createBlockLoader(String fieldName) {
         return mapperService.fieldType(fieldName).blockLoader(new DummyBlockLoaderContext.MapperServiceBlockLoaderContext(mapperService) {
             @Override
             public MappedFieldType.FieldExtractPreference fieldExtractPreference() {
